<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rashi.hw02.CreateTaskActivity">

    <EditText
        android:id="@+id/task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Task"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:text="@string/Task" />

    <EditText
        android:id="@+id/dd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/task"
        android:layout_alignStart="@+id/task"
        android:layout_below="@+id/task"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="Date"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/tt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dd"
        android:layout_alignStart="@+id/dd"
        android:layout_below="@+id/dd"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="Time"
        android:inputType="textPersonName"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tt"
        android:layout_alignStart="@+id/tt"
        android:layout_below="@+id/tt"
        android:layout_marginTop="37dp"
        android:text="@string/priority" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/priority"
        android:layout_alignStart="@+id/priority"
        android:layout_below="@+id/priority"
        android:layout_marginTop="31dp"
        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/high" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_weight="1"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/low" />

    </RadioGroup>

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="18dp"
        android:text="@string/save" />

</RelativeLayout>
