<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context="com.example.rashi.hw02.MainActivity">

    <ImageButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/taskDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/taskTime"
        android:layout_alignBottom="@+id/taskTime"
        android:layout_marginBottom="51dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:layout_toLeftOf="@+id/taskTime"
        android:layout_toStartOf="@+id/taskTime"
        android:text="Task Date"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@+id/taskPriority"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_main"
        tools:text="@string/TaskDate" />

    <TextView
        android:id="@+id/taskTime"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add"

        android:layout_marginBottom="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_toLeftOf="@+id/next"
        android:layout_toStartOf="@+id/next"
        android:text="@string/TaskTime"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@+id/taskPriority"
        app:layout_constraintStart_toEndOf="@+id/taskDate"
        app:layout_constraintTop_toBottomOf="@+id/task_main" />

    <TextView
        android:id="@+id/taskPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/delete"
        android:layout_alignRight="@+id/delete"
        android:layout_below="@+id/taskDate"
        android:layout_marginBottom="200dp"
        android:layout_marginEnd="147dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="16dp"
        android:text="@string/TaskPriority"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@+id/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskTime" />

    <ImageButton
        android:id="@+id/delete"
        style="@android:style/Widget.DeviceDefault.ImageButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        android:layout_toLeftOf="@+id/next"
        android:layout_toStartOf="@+id/next"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <ImageButton
        android:id="@+id/next"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_alignEnd="@+id/add"
        android:layout_alignRight="@+id/add"
        android:layout_alignTop="@+id/delete"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/last"
        app:srcCompat="@android:drawable/ic_media_play" />

    <ImageButton
        android:id="@+id/last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/next"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_media_ff" />

    <ImageButton
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/delete"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="9dp"
        android:layout_toLeftOf="@+id/taskPriority"
        android:layout_toStartOf="@+id/taskPriority"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/first"
        app:srcCompat="@android:drawable/ic_media_previous" />

    <ImageButton
        android:id="@+id/first"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/previous"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_media_rew" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/delete"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="16dp"
        android:layout_toLeftOf="@+id/delete"
        android:layout_toStartOf="@+id/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete"
        app:layout_constraintStart_toEndOf="@+id/previous"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <TextView
        android:id="@+id/task_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="80dp"
        android:text="@string/Task_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@+id/taskDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/taskCount"
        android:layout_width="172dp"
        android:layout_height="34dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="348dp"
        android:text="@string/TaskCount"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272" />

</android.support.constraint.ConstraintLayout>
